Project migrated to Nextjs and finished countdown component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,18 @@
   box-sizing: border-box;
 }
 
-body {
-  background: var(--background);
-  color: var(--text);
+:root {
+  --white: #fff;
+  --background: #f2f3f5;
+  --gray-line: #dcdde0;
+  --text: #666666;
+  --text-highlight: #b3b9ff;
+  --title: #2e384d;
+  --red: #e83f5b;
+  --green: #4cd62b;
+  --blue: #5965e0;
+  --blue-dark: #4953b8;
+  --blue-twitter: #2aa9e0;
 }
 
 @media (max-width: 1080px) {
@@ -19,6 +28,11 @@ body {
   html {
     font-size: 87.5%;
   }
+}
+
+body {
+  background: var(--background);
+  color: var(--text);
 }
 
 body,
@@ -35,57 +49,4 @@ button {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-:root {
-  --white: #fff;
-  --background: #f23f3f5;
-  --gray-line: #dcdde0;
-  --text: #666;
-  --text-highlight: #b3b9ff;
-  --title: #2e384d;
-  --red: #e83f5b;
-  --green: #4cd62b;
-  --blue: #5965e0;
-  --blue-dark: #4953b8;
-  --blue-twitter: #2aa9e0;
-}
-
-.container {
-  height: 100vh;
-  max-width: 992px;
-  margin: 0 auto;
-  padding: 2.5rem 2rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.experience-bar {
-  display: flex;
-  align-items: center;
-}
-
-.experience-bar span {
-  font-size: 1rem;
-}
-
-.experience-bar > div {
-  flex: 1;
-  height: 4px;
-  border-radius: 4px;
-  background-color: var(--gray-line);
-  margin: 0 1.5rem;
-  position: relative;
-}
-
-.experience-bar > div > div {
-  height: 4px;
-  border-radius: 4px;
-  background-color: var(--green);
-}
-
-span.current-experience {
-  position: absolute;
-  top: 12px;
-  transform: translateX(-50%);
 }
